# py_sample

./: README.md  pyproject.toml
basic/: new_and_init.py  repr_and_str.py
design_pattern/: singleton.py
